# longan-nano-playground-rs

./: Cargo.toml  FT2232HL.cfg  README.md  build.sh  flash.sh  openocd.gdb
.cargo/: config
examples/: adc.rs  bad_apple.rs  blinky.rs  button.rs  cpuinfo.rs  irq.rs  lcd-font.rs  rtc.rs  uart.rs  usbhid.rs
scripts/: convert.py  esp8266.py  font.py
src/: adc.rs  esp_at.rs  lcd.rs  lib.rs  stdout.rs
