[package]
name = "longan-nano-playground"
version = "0.1.0"
authors = ["Andelf <andelf@gmail.com>"]
edition = "2018"


[dependencies]
gd32vf103xx-hal = "0.4.0"
embedded-hal = "0.2.4"

# deps for examples
[dev-dependencies]
# outdated in crates.io, use git
longan-nano = { git = "https://github.com/riscv-rust/longan-nano", features = ["lcd"] }
nb = "0.1.2"
riscv = "0.6.0"
st7735-lcd = "0.7"
riscv-rt = "0.8.0"
panic-halt = "0.2.0"
embedded-graphics = "0.6"
embedded-sdmmc = "0.3"
