[package]
name = "longan-nano-playground"
version = "0.1.0"
authors = ["Andelf <andelf@gmail.com>"]
edition = "2018"


[dependencies]
embedded-hal = "0.2.4"
nb = "0.1.2"
riscv = "0.6.0"
gd32vf103xx-hal = { path = "../gd32vf103xx-hal" }
st7735-lcd = "0.7"

# deps for examples
[dev-dependencies]
# outdated in crates.io, use git
# longan-nano = { git = "https://github.com/riscv-rust/longan-nano", features = ["lcd"] }
riscv-rt = "0.8.0"
panic-halt = "0.2.0"
embedded-graphics = "0.6"
embedded-sdmmc = "0.3"
ssd1306 = "0.4"
embedded-drivers = { path = "../embedded-drivers" }
# embedded-picofont = "0.2.1"
# profont = "0.4.0"
